[tool.poetry]
name = "mds_pycounts_yzeng"
version = "0.1.0"
description = "toy package"
authors = ["Yan Zeng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
